k8s/selenium-node-chrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-node-chrome
  labels:
    app: selenium-node-chrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-node-chrome
  template:
    metadata:
      labels:
        app: selenium-node-chrome
    spec:
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      containers:
        - name: selenium-node-chrome
          image: selenium/node-chrome:4.9.1-20230508
          ports:
            - containerPort: 5555
          lifecycle:
            preStop:
              exec:
                command: [ "/bin/sh", "-c", "curl --request POST 'localhost:5555/se/grid/node/drain' --header 'X-REGISTRATION-SECRET;'; tail --pid=$(pgrep -f '[n]ode --bind-host false --config /opt/selenium/config.toml') -f /dev/null; sleep 30s" ]
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
          resources:
            limits:
              memory: "1000Mi"
              cpu: ".5"
      terminationGracePeriodSeconds: 3600 # Time to wait before moving from a TERM signal to the pod's main process to a KILL signal.
